<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CalcActivity">

    <LinearLayout
        android:id="@+id/FoodLinerLaylout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CalcFoodTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/foodHeader2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/BreakfastEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/breakfastHeader"
            android:inputType="number"
            android:nextFocusDown="@id/LunchEditText"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/LunchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/lunchHeader"
            android:inputType="number"
            android:nextFocusDown="@id/DinnerEditText"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DinnerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/dinnerHeading"
            android:inputType="number"
            android:nextFocusDown="@id/Exe1EditText"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ExerciseLinerLaylout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodLinerLaylout">

        <TextView
            android:id="@+id/CalcExerciseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/exerciseHeader2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Exe1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/runningHeader"
            android:inputType="number"
            android:nextFocusDown="@id/Exe2EditText"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Exe2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/gymHeader"
            android:inputType="number"
            android:nextFocusDown="@id/Exe3EditText"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Exe3EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/otherHeader"
            android:inputType="number"
            android:nextFocusDown="@id/CalcDatePicker"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/HR1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLinerLaylout" />

    <TextView
        android:id="@+id/FoodTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:text="@string/foodTotalHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HR1" />

    <TextView
        android:id="@+id/ExcersiseTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="45dp"
        android:layout_weight="1"
        android:text="@string/exerciseTotalHeader"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/NetTotalTextView"
        app:layout_constraintEnd_toEndOf="@+id/FoodTotalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodTotalTextView" />

    <TextView
        android:id="@+id/NetTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_weight="1"
        android:text="@string/netTotalHeader"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/HR2"
        app:layout_constraintEnd_toEndOf="@+id/ExcersiseTotalTextView" />

    <View
        android:id="@+id/HR2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="256dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLinerLaylout" />

    <TextView
        android:id="@+id/FoodTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:hint="-"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/FoodTotalTextView"
        app:layout_constraintTop_toTopOf="@+id/FoodTotalTextView" />

    <TextView
        android:id="@+id/NetTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="0"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/NetTotalTextView"
        app:layout_constraintStart_toStartOf="@+id/ExerciseTotalValue" />

    <TextView
        android:id="@+id/ExerciseTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="-"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ExcersiseTotalTextView"
        app:layout_constraintStart_toStartOf="@+id/FoodTotalValue" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/CancelFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goBackClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddEntryFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="newEntryClick"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <EditText
        android:id="@+id/CalcDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:clickable="false"
        android:contextClickable="false"
        android:ems="10"
        android:focusedByDefault="false"
        android:hint="@string/datePickHint"
        android:inputType="date"
        android:lineSpacingExtra="0sp"
        android:linksClickable="false"
        android:nextFocusDown="@id/AddEntryFAB"
        android:onClick="showDatePickerDialog"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/CancelFab"
        app:layout_constraintEnd_toStartOf="@+id/AddEntryFAB"
        app:layout_constraintStart_toEndOf="@+id/CancelFab"
        app:layout_constraintTop_toBottomOf="@+id/HR2" />

</android.support.constraint.ConstraintLayout>